--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@discordjs/rest": "^2.3.0",
     "discord-api-types": "^0.37.93",
     "discord.js": "^14.15.3",
-	"dotenv": "^16.4.5",
+    "node-fetch": "^2.6.7",
+    "dotenv": "^16.4.5",
     "axios": "^1.5.0"
   }
 }
