--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.15.3",
     "node-fetch": "^2.6.7",
     "dotenv": "^16.4.5",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "punycode": "^2.3.1"
   }
 }
