--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "description": "",
   "dependencies": {
     "@discordjs/rest": "^2.3.0",
+    "@discordjs/voice": "^0.17.0",
+    "axios": "^1.5.0",
     "discord-api-types": "^0.37.93",
     "discord.js": "^14.15.3",
-	"node-fetch": "^2.6.7",
-	"dotenv": "^16.4.5",
-    "axios": "^1.5.0",
-	"punycode": "^2.3.1"
+    "dotenv": "^16.4.5",
+    "node-fetch": "^2.6.7",
+    "punycode": "^2.3.1"
   }
 }
